started testing and adjusting in SparseMap, making good progress so far.